--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#SSL Key Info
+security.require-ssl=true
+server.ssl.key-store-password=123456
+server.ssl.key-store=ebininfosoft-ssl-key.p12
+server.ssl.key-store-type=PKCS12
+
 
